--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,31 +13,24 @@
         android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".Feedback"
+            android:name=".activities.Feedback"
             android:exported="false" />
         <activity
-            android:name=".ContactUs"
+            android:name=".activities.ContactUs"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MissionAndVision"
+            android:name=".activities.MissionAndVision"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainStart"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".DisplayInfo"
+            android:name=".activities.DisplayInfo"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -52,16 +45,20 @@
         </activity>
         <activity
             android:name=".activities.StartActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+
+        </activity>
+        <activity
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".SplashScreen"
-            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
